ipc/ipdl/test/ipdl/error/trans_WrongDirection2.ipdl
protocol trans_WrongDirection2 {

parent:
    Msg();
    __delete__();

state S1:
    send Msg goto S1;

start state _:
    recv __delete__;
};
